Lab3/Code/syntax.output
State 36 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | ExtDecList error ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC DefList error
   16                | STRUCT error

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error
   23       | VarDec LB INT error

   24 ParamDec: Specifier VarDec

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec
   27        | ParamDec error VarList

   28 FunDec: ID LP VarList RP
   29       | ID LP RP

   30 CompSt: LC DefList StmtList RC
   31       | LC DefList StmtList error

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | Exp error
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | RETURN error SEMI
   42     | RETURN Exp error

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier DecList error SEMI
   47    | Specifier error SEMI

   48 DecList: Dec
   49        | Dec COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp
   52    | VarDec ASSIGNOP error

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp ASSIGNOP error
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | LP Exp error
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP Args error
   68    | ID LP RP
   69    | Exp LB Exp RB
   70    | Exp LB error RB
   71    | Exp DOT ID
   72    | ID
   73    | INT
   74    | FLOAT

   75 Args: Exp COMMA Args
   76     | Exp
   77     | Args error Args


Terminals, with rules where they appear

$end (0) 0
error (256) 10 15 16 22 23 27 31 35 41 42 46 47 52 54 63 67 70 77
INT (258) 21 23 73
FLOAT (259) 74
ID (260) 17 19 20 28 29 66 67 68 71 72
SEMI (261) 4 5 7 34 37 41 45 46 47
COMMA (262) 9 25 49 75
ASSIGNOP (263) 51 52 53 54
RELOP (264) 57
PLUS (265) 58
MINUS (266) 59 64
STAR (267) 60
DIV (268) 61
AND (269) 55
OR (270) 56
DOT (271) 71
NOT (272) 65
TYPE (273) 11
LP (274) 28 29 38 39 40 62 63 66 67 68
RP (275) 28 29 38 39 40 62 66 68
LB (276) 21 22 23 69 70
RB (277) 21 69 70
LC (278) 13 15 30 31
RC (279) 13 30
STRUCT (280) 13 14 15 16
RETURN (281) 37 41 42
IF (282) 38 39
ELSE (283) 39
WHILE (284) 40
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9 10, on right: 4 9 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 24 45 46 47
StructSpecifier (37)
    on left: 13 14 15 16, on right: 12
OptTag (38)
    on left: 17 18, on right: 13 15
Tag (39)
    on left: 19, on right: 14
VarDec (40)
    on left: 20 21 22 23, on right: 8 9 21 22 23 24 50 51 52
ParamDec (41)
    on left: 24, on right: 25 26 27
VarList (42)
    on left: 25 26 27, on right: 25 27 28
FunDec (43)
    on left: 28 29, on right: 6 7
CompSt (44)
    on left: 30 31, on right: 6 36
StmtList (45)
    on left: 32 33, on right: 30 31 32
Stmt (46)
    on left: 34 35 36 37 38 39 40 41 42, on right: 32 38 39 40
DefList (47)
    on left: 43 44, on right: 13 15 30 31 43
Def (48)
    on left: 45 46 47, on right: 43
DecList (49)
    on left: 48 49, on right: 45 46 49
Dec (50)
    on left: 50 51 52, on right: 48 49
Exp (51)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74, on right: 34 35 37 38 39 40 42 51 53 54 55 56 57 58
    59 60 61 62 63 64 65 69 70 71 75 76
Args (52)
    on left: 75 76 77, on right: 66 67 75 77


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC DefList error
   16                | STRUCT . error

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 18 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   16 StructSpecifier: STRUCT error .

    $default  reduce using rule 16 (StructSpecifier)


State 9

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 10

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC DefList error

    LC  shift, and go to state 19


State 11

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

   20 VarDec: ID .
   28 FunDec: ID . LP VarList RP
   29       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 20 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
   10 ExtDecList: ExtDecList . error ExtDecList

    error  shift, and go to state 21
    SEMI   shift, and go to state 22


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error
   23       | VarDec . LB INT error

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 25
    LC    shift, and go to state 26

    CompSt  go to state 27


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

   28 FunDec: ID LP . VarList RP
   29       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    ParamDec         go to state 33
    VarList          go to state 34


State 21

   10 ExtDecList: ExtDecList error . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 37
    VarDec      go to state 17


State 24

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error
   23       | VarDec LB . INT error

    error  shift, and go to state 38
    INT    shift, and go to state 39


State 25

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 26

   30 CompSt: LC . DefList StmtList RC
   31       | LC . DefList StmtList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   45 Def: Specifier . DecList SEMI
   46    | Specifier . DecList error SEMI
   47    | Specifier . error SEMI

    error  shift, and go to state 41
    ID     shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 29

   13 StructSpecifier: STRUCT OptTag LC DefList . RC
   15                | STRUCT OptTag LC DefList . error

    error  shift, and go to state 45
    RC     shift, and go to state 46


State 30

   43 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 47
    Def              go to state 30


State 31

   29 FunDec: ID LP RP .

    $default  reduce using rule 29 (FunDec)


State 32

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 48


State 33

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .
   27        | ParamDec . error VarList

    error  shift, and go to state 49
    COMMA  shift, and go to state 50

    RP  reduce using rule 26 (VarList)


State 34

   28 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 35

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 36

   10 ExtDecList: ExtDecList . error ExtDecList
   10           | ExtDecList error ExtDecList .

    error  shift, and go to state 21

    error  [reduce using rule 10 (ExtDecList)]
    SEMI   reduce using rule 10 (ExtDecList)


State 37

    9 ExtDecList: VarDec COMMA ExtDecList .
   10           | ExtDecList . error ExtDecList

    error  shift, and go to state 21

    error  [reduce using rule 9 (ExtDecList)]
    SEMI   reduce using rule 9 (ExtDecList)


State 38

   22 VarDec: VarDec LB error .

    $default  reduce using rule 22 (VarDec)


State 39

   21 VarDec: VarDec LB INT . RB
   23       | VarDec LB INT . error

    error  shift, and go to state 52
    RB     shift, and go to state 53


State 40

   30 CompSt: LC DefList . StmtList RC
   31       | LC DefList . StmtList error

    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 26
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 41

   47 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 42

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error
   23       | VarDec . LB INT error
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp
   52    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 24

    $default  reduce using rule 50 (Dec)


State 43

   45 Def: Specifier DecList . SEMI
   46    | Specifier DecList . error SEMI

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 44

   48 DecList: Dec .
   49        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 48 (DecList)


State 45

   15 StructSpecifier: STRUCT OptTag LC DefList error .

    $default  reduce using rule 15 (StructSpecifier)


State 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 47

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 48

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error
   23       | VarDec . LB INT error
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 24 (ParamDec)


State 49

   27 VarList: ParamDec error . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    ParamDec         go to state 33
    VarList          go to state 72


State 50

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    ParamDec         go to state 33
    VarList          go to state 73


State 51

   28 FunDec: ID LP VarList RP .

    $default  reduce using rule 28 (FunDec)


State 52

   23 VarDec: VarDec LB INT error .

    $default  reduce using rule 23 (VarDec)


State 53

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 54

   73 Exp: INT .

    $default  reduce using rule 73 (Exp)


State 55

   74 Exp: FLOAT .

    $default  reduce using rule 74 (Exp)


State 56

   66 Exp: ID . LP Args RP
   67    | ID . LP Args error
   68    | ID . LP RP
   72    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 72 (Exp)


State 57

   64 Exp: MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 75


State 58

   65 Exp: NOT . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 76


State 59

   62 Exp: LP . Exp RP
   63    | LP . Exp error

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 77


State 60

   37 Stmt: RETURN . Exp SEMI
   41     | RETURN . error SEMI
   42     | RETURN . Exp error

    error  shift, and go to state 78
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 79


State 61

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 80


State 62

   40 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 81


State 63

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


State 64

   30 CompSt: LC DefList StmtList . RC
   31       | LC DefList StmtList . error

    error  shift, and go to state 82
    RC     shift, and go to state 83


State 65

   32 StmtList: Stmt . StmtList

    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 26
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 84
    Stmt      go to state 65
    Exp       go to state 66


State 66

   34 Stmt: Exp . SEMI
   35     | Exp . error
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    error     shift, and go to state 85
    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 67

   47 Def: Specifier error SEMI .

    $default  reduce using rule 47 (Def)


State 68

   51 Dec: VarDec ASSIGNOP . Exp
   52    | VarDec ASSIGNOP . error

    error  shift, and go to state 97
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 98


State 69

   46 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 99


State 70

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 71

   49 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 100
    Dec      go to state 44


State 72

   27 VarList: ParamDec error VarList .

    $default  reduce using rule 27 (VarList)


State 73

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 74

   66 Exp: ID LP . Args RP
   67    | ID LP . Args error
   68    | ID LP . RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 101

    Exp   go to state 102
    Args  go to state 103


State 75

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   64    | MINUS Exp .
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    STAR  shift, and go to state 91
    DIV   shift, and go to state 92
    DOT   shift, and go to state 95
    LB    shift, and go to state 96

    $default  reduce using rule 64 (Exp)


State 76

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   65    | NOT Exp .
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    DOT  shift, and go to state 95
    LB   shift, and go to state 96

    $default  reduce using rule 65 (Exp)


State 77

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   62    | LP Exp . RP
   63    | LP Exp . error
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    error     shift, and go to state 104
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 105
    LB        shift, and go to state 96


State 78

   41 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 106


State 79

   37 Stmt: RETURN Exp . SEMI
   42     | RETURN Exp . error
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    error     shift, and go to state 107
    SEMI      shift, and go to state 108
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 80

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 109


State 81

   40 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 110


State 82

   31 CompSt: LC DefList StmtList error .

    $default  reduce using rule 31 (CompSt)


State 83

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 84

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


State 85

   35 Stmt: Exp error .

    $default  reduce using rule 35 (Stmt)


State 86

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 87

   53 Exp: Exp ASSIGNOP . Exp
   54    | Exp ASSIGNOP . error

    error  shift, and go to state 111
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 112


State 88

   57 Exp: Exp RELOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 113


State 89

   58 Exp: Exp PLUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 114


State 90

   59 Exp: Exp MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 115


State 91

   60 Exp: Exp STAR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 116


State 92

   61 Exp: Exp DIV . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 117


State 93

   55 Exp: Exp AND . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 118


State 94

   56 Exp: Exp OR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 119


State 95

   71 Exp: Exp DOT . ID

    ID  shift, and go to state 120


State 96

   69 Exp: Exp LB . Exp RB
   70    | Exp LB . error RB

    error  shift, and go to state 121
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 122


State 97

   52 Dec: VarDec ASSIGNOP error .

    $default  reduce using rule 52 (Dec)


State 98

   51 Dec: VarDec ASSIGNOP Exp .
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 51 (Dec)


State 99

   46 Def: Specifier DecList error SEMI .

    $default  reduce using rule 46 (Def)


State 100

   49 DecList: Dec COMMA DecList .

    $default  reduce using rule 49 (DecList)


State 101

   68 Exp: ID LP RP .

    $default  reduce using rule 68 (Exp)


State 102

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID
   75 Args: Exp . COMMA Args
   76     | Exp .

    COMMA     shift, and go to state 123
    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 76 (Args)


State 103

   66 Exp: ID LP Args . RP
   67    | ID LP Args . error
   77 Args: Args . error Args

    error  shift, and go to state 124
    RP     shift, and go to state 125


State 104

   63 Exp: LP Exp error .

    $default  reduce using rule 63 (Exp)


State 105

   62 Exp: LP Exp RP .

    $default  reduce using rule 62 (Exp)


State 106

   41 Stmt: RETURN error SEMI .

    $default  reduce using rule 41 (Stmt)


State 107

   42 Stmt: RETURN Exp error .

    $default  reduce using rule 42 (Stmt)


State 108

   37 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 37 (Stmt)


State 109

   38 Stmt: IF LP Exp . RP Stmt
   39     | IF LP Exp . RP Stmt ELSE Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 126
    LB        shift, and go to state 96


State 110

   40 Stmt: WHILE LP Exp . RP Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 127
    LB        shift, and go to state 96


State 111

   54 Exp: Exp ASSIGNOP error .

    $default  reduce using rule 54 (Exp)


State 112

   53 Exp: Exp . ASSIGNOP Exp
   53    | Exp ASSIGNOP Exp .
   54    | Exp . ASSIGNOP error
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . LB error RB
   71    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    RELOP     shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 53 (Exp)


State 113
